# Eve-MCU-Dev

./: .gitignore  README.md
.github/workflows/: api_test.yml  build_arduino.yml  build_linux.yml  build_pico.yml  build_raspberry_pi.yml  build_windows.yml
examples/: README.md
examples/arduino_library/: .gitignore  EVE_config.h.template  README.md  README.md.template  bteve.cpp.template  bteve.h.template  libbuild.py  library.properties.template  test.ino.template
examples/b2tf/: README.md
examples/b2tf/common/: b2tf.c  b2tf.h  eve_calibrate.c  eve_example.c  eve_example.h  eve_helper.c
examples/b2tf/libft4222/: CMakeLists.txt  README.md  main.c
examples/b2tf/libft4222/VisualStudio/: libFT4222.vcxproj  libFT4222.vcxproj.filters
examples/cruise/: README.md
examples/cruise/common/: cruise.c  cruise.h  eve_calibrate.c  eve_example.c  eve_example.h  eve_helper.c  eve_helper.h
examples/cruise/ft900/: .cproject  .gitignore  .project  CMakeLists.txt  README.md
examples/cruise/libft4222/: CMakeLists.txt  README.md  main.c
examples/cruise/pico/: .gitignore  CMakeLists.txt  README.md
examples/cruise/pico_vscode/: CMakeLists.txt  README.md  build.ninja  cmake_install.cmake  compile_commands.json  cruise.code-workspace  pico_vscode.code-workspace
examples/datavisualiser/: README.md
examples/datavisualiser/common/: eve_example.c  eve_example.h
examples/datavisualiser/libft4222/: .gitignore  CMakeLists.txt
examples/datavisualiser/pico/: .gitignore  CMakeLists.txt
examples/dronefpv-bt82x/: README.md
examples/dronefpv-bt82x/common/: eve_calibrate.c  eve_example.c  eve_example.h  eve_helper.c  patch_dronefpv.c  patch_dronefpv.h
examples/dronefpv-bt82x/libft4222/: CMakeLists.txt  README.md  main.c
examples/dronefpv-bt82x/libmpsse/: .gitignore  CMakeLists.txt  README.md  ReadMe.txt  main.c
examples/dronefpv-bt82x/libmpsse/VisualStudio/: libMPSSE.vcxproj  libMPSSE.vcxproj.filters
examples/flightdeck/: README.md
examples/flightdeck/common/: eve_calibrate.c  eve_example.c  eve_example.h  eve_helper.c
examples/flightdeck/emulator/: CMakeLists.txt  main.c
examples/flightdeck/libft4222/: CMakeLists.txt  README.md  main.c
examples/fontmagic/: README.md
examples/fontmagic/STM32/: README.md  project.uvprojx
examples/fontmagic/STM32CUBE/: .cproject  .project  README.md  fontmagic.launch  fontmagic_STM32F0308DISCO.ioc
examples/fontmagic/common/: eve_calibrate.c  eve_example.c  eve_example.h  eve_fonts.c  eve_helper.c  fontmagic.c  fontmagic.h
examples/fontmagic/libft4222/: .gitignore  CMakeLists.txt  Makefile  README.md  main.c
examples/fontmagic/libft4222/VisualStudio/: libFT4222.vcxproj  libFT4222.vcxproj.filters
examples/gyminterval/: README.md
examples/gyminterval/common/: eve_example.c  eve_example.h
examples/gyminterval/libft4222/: CMakeLists.txt  README.md  main.c
examples/gyminterval/pico/: CMakeLists.txt  README.md
examples/medinfo/: README.md
examples/medinfo/assets/: .gitignore  flash-820-default.map  flashmap.py
examples/medinfo/common/: eve_assetload_array.c  eve_assetload_file.c  eve_assetload_flash.c  eve_example.c  eve_example.h  eve_graph_extension.c  eve_graph_vertexes.c  eve_tracedata.c  patch_medinfo.c  patch_medinfo.h
examples/medinfo/libft4222/: CMakeLists.txt  README.md  main.c
examples/medinfo/libft4222/VisualStudio/: libFT4222.vcxproj  libFT4222.vcxproj.filters
examples/medinfo/pico/: CMakeLists.txt  README.md  medinfo.code-workspace
examples/racecar/: README.md
examples/racecar/assets/: .gitignore  flashmap.py
examples/racecar/common/: eve_assetload_array.c  eve_assetload_file.c  eve_assetload_flash.c  eve_assetload_flash_eve3.c  eve_assetload_flash_eve4.c  eve_assetload_flash_eve5.c  eve_example.c  eve_example.h  eve_helper.c  patch_textscale.c  patch_textscale.h
examples/racecar/libft4222/: CMakeLists.txt  README.md  main.c
examples/racecar/pico/: CMakeLists.txt  README.md  racecar.code-workspace
examples/simple/: README.md
examples/simple/STM32CUBE_CMake_MiniSTM32H7xx/: .mxproject  CMakeLists.txt  STM32CUBE_CMake_MiniSTM32H7xx.code-workspace  STM32CUBE_CMake_MiniSTM32H7xx.ioc  STM32H743XX_FLASH.ld
examples/simple/STM32CUBE_CMake_MiniSTM32H7xx/Core/Inc/: stm32h7xx_it.h
examples/simple/STM32CUBE_CMake_MiniSTM32H7xx/Core/Src/: gpio.c  main.c  rtc.c  stm32h7xx_it.c
examples/simple/STM32CUBE_CMake_MiniSTM32H7xx/cmake/stm32cubemx/: CMakeLists.txt
examples/simple/libmpsse/: CMakeLists.txt  README.md  main.c
examples/simple/libmpsse/VisualStudio/: libMPSSE.vcxproj  libMPSSE.vcxproj.filters
examples/snippets/: README.md  touch.c  touch.h
examples/touchscreentest/: README.md
include/: BT81x.h  BT82x.h  EVE.h  EVE_commands.h  EVE_config.h  EVE_registers.h  FT80x.h  FT81x.h  FT8xx.h  HAL.h  MCU.h  Platform.h
ports/: README.md
ports/eve_arch_arduino/: README.md  eve_arch_arduino.ino
ports/eve_arch_beaglebone/: EVE_Linux_BBB.c  README.md
ports/eve_arch_esp32/: CMakeLists.txt  EVE_MCU_ESP32.c  README.md
ports/eve_arch_ft9xx/: EVE_MCU_FT9XX.c  README.md
ports/eve_arch_msp/: EVE_MCU_MSP430.c  EVE_MCU_MSPM0.c  README.md
ports/eve_arch_msp430/: EVE_MCU_MSP430.c
ports/eve_arch_nxpk64/: EVE_MCU_NXP.c  README.md
ports/eve_arch_pic/: EVE_MCU_PIC.c  README.md
ports/eve_arch_rpi/: EVE_Linux_RPi.c  EVE_MCU_RP2040.c  README.md
ports/eve_arch_stm32/: EVE_MCU_STM32.c  EVE_MCU_STM32CUBE.c  EVE_MCU_STM32CUBE_QUADSPI.c  EVE_MCU_STM32CUBE_SPI.c  README.md
ports/eve_arch_stm32cube/: EVE_MCU_STM32CUBE.c
ports/eve_bt82x/: patch_base.c  patch_base.h
ports/eve_emulator/: .gitignore  EVE_emulator.c  README.md  install_emulator.bat  install_emulator.sh
ports/eve_libft4222/: .gitignore  EVE_libft4222.c  README.md  install_libft4222.bat  install_libft4222.sh
ports/eve_libmpsse/: .gitignore  EVE_libmpsse.c  README.md  install_libmpsse.bat
source/: EVE_API.c  EVE_HAL.c  EVE_HAL_Linux.c
test/: EVE_simulator.c  README.md
test/boottester/: .gitignore  CMakeLists.txt  main.c
test/boottester/buildWXGA/: CMakeCache.txt  Makefile  boottester  cmake_install.cmake
(+292 files in other folders)
